--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     
     
     <!-- NavBar -->
-    <nav class="bg-deepBlue">
+    <nav class="bg-[#04032d]">
         <div class="relative  w-10/12 md:max-w-[1080px]  flex justify-between items-center mx-auto">
           <!-- logo -->
             <a href="" class="cursor-pointer py-7 pr-7">
