--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <!-- HeroSection -->
 
     <section
-    class="relative bg-deepBlue">
+    class="relative bg-[#04032d]">
   
     <div class="w-10/12 max-w-[1080px] flex flex-col  lg:flex-row justify-between items-center mx-auto ">
         <!--left part-->
@@ -232,7 +232,7 @@
                     <!-- For Buttons and hyperlink -->
                     <div class="flex flex-col-reverse md:flex-row items-center space-x-4 ">
                         <button
-                            class="bg-lightBlue text-white py-[14px] px-[18px] rounded-md font-mullish font-bold hover:bg-lightBlue500 transition-all duration-200 flex items-center w-full md:w-fit ">
+                            class="bg-[#2b84ea] text-white py-[14px] px-[18px] rounded-md font-mullish font-bold hover:bg-lightBlue500 transition-all duration-200 flex items-center w-full md:w-fit ">
                             Sign Up Now
                             <svg viewBox="0 0 24 24" focusable="false" class="w-[14px] h-[14px] ">
                               <path fill="currentColor" d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"></path>
