--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       background-size: 100% 100%;
       padding-top: 10rem;
         padding-bottom: 10rem;
+        background: url(./images/CTABg.svg);
     }
 
      @media only screen and (max-width: 620px) {
@@ -633,7 +634,7 @@
                           md:justify-start text-white py-[14px] px-[18px] md:pr-[90px] rounded-md
                            font-mullish font-bold hover:bg-[#2b84ea] transition-all duration-200 self-stretch md:w-fit place-content-center ">
                               Sign Up
-                              <div class="w-12 h-[60px] bg-[#344a6c] absolute right-6 skew-x-[20deg] 
+                              <div class="w-12 h-[60px] bg-[#61cea6] absolute right-6 skew-x-[20deg] 
                               flex justify-center items-center">
                                   <!--arrow-->
                                   <svg
@@ -1219,7 +1220,7 @@
 
     <!-- cta -->
 
-    <section class=" bg-[url(./images/CTAbg.svg)] relative w-full h-full bg-no-repeat bg-cover ctaSection min-h-[450px]">
+    <section class="  relative w-full h-full bg-no-repeat bg-cover ctaSection min-h-[450px]">
 
       
       <!-- main content -->
