--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 <style>
+  .box-shadow:hover{
+    filter: drop-shadow(0 0 15px black);
+    
+
+  }
     .corefeaturesection{
         background-size: 100% 100%;
         padding-top: 12rem;
@@ -259,7 +264,7 @@
         </div>
         <div class="w-11/12 md:max-w-[1080px] grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-10 max-w-[1080px] mx-auto">
             <!--Box1-->
-            <div class="w-full min-h-[15rem] relative cursor-pointer featureCard">
+            <div class="w-full min-h-[15rem]  hover:drop-shadow-2xl relative cursor-pointer featureCard">
                 <img src="./images/payment-link-icon.svg" alt=""
                 class="bg-[#2b84ea] absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                 transition-all duration-200">
@@ -310,7 +315,7 @@
 
             </div>
             <!--Box2-->
-            <div class="w-full min-h-[15rem] relative cursor-pointer featureCard">
+            <div class="w-full min-h-[15rem] hover:drop-shadow-2xl relative cursor-pointer featureCard">
                 <img src="./images/payment-pages-icon.svg" alt=""
                 class="bg-[#2b84ea] absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                 transition-all duration-200">
@@ -361,7 +366,7 @@
 
             </div>
             <!--Box3-->
-            <div class="w-full min-h-[15rem] relative cursor-pointer featureCard">
+            <div class="w-full min-h-[15rem] hover:drop-shadow-2xl relative cursor-pointer featureCard">
                 <img src="./images/payment-buttons-icon.svg" alt=""
                 class="bg-[#2b84ea] absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                 transition-all duration-200">
@@ -412,7 +417,7 @@
 
             </div>
             <!--Box4-->
-            <div class="w-full min-h-[15rem] relative cursor-pointer featureCard">
+            <div class="w-full min-h-[15rem] hover:drop-shadow-2xl relative cursor-pointer featureCard">
                 <img src="./images/subscriptions-icon.svg" alt=""
                 class="bg-[#2b84ea] absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                 transition-all duration-200">
@@ -463,7 +468,7 @@
 
             </div>
             <!--Box5-->
-            <div class="w-full min-h-[15rem] relative cursor-pointer featureCard">
+            <div class="w-full min-h-[15rem] hover:drop-shadow-2xl relative cursor-pointer featureCard">
                 <img src="./images/route-icon.svg" alt=""
                 class="bg-[#2b84ea] absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                 transition-all duration-200">
@@ -514,7 +519,7 @@
 
             </div>
             <!--Box6-->
-            <div class="w-full min-h-[15rem] relative cursor-pointer  featureCard">
+            <div class="w-full min-h-[15rem] hover:drop-shadow-2xl relative cursor-pointer  featureCard">
                 <img src="./images/smart-collect-icon.svg" alt=""
                 class="bg-[#2b84ea] absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                 transition-all duration-200">
@@ -672,7 +677,7 @@
               <div class="grid  grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-full   gap-4 my-14">
                   <!--box1-->
                   <div
-                  class="w-full  min-h-[15rem] relative cursor-pointer featureCard2"
+                  class="w-full box-shadow  min-h-[15rem] relative cursor-pointer featureCard2"
                 >
                   <!-- box icon -->
                   <img
@@ -729,7 +734,7 @@
                   </div>
                   <!--box2-->
                   <div
-                  class="w-full min-h-[15rem] relative cursor-pointer featureCard2"
+                  class="w-full min-h-[15rem] box-shadow relative cursor-pointer featureCard2"
                 >
                   <!-- box icon -->
                   <img
@@ -785,7 +790,7 @@
                   </div>
                   <!--box3-->
                   <div
-                  class="w-full min-h-[15rem] relative cursor-pointer featureCard2"
+                  class="w-full min-h-[15rem] box-shadow relative cursor-pointer featureCard2"
                 >
                   <!-- box icon -->
                   <img
