--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     @media only screen and (max-width: 620px) {
       .coreFeaturesBg{
         background-size: 190% 110%;
+        padding-top: 15rem;
        
     }
 
@@ -926,11 +927,10 @@
               </div>
               <!--card 2-->
               <div
-              class="p-10 bg-[url(./images/upi-autopay-bg.svg)] w-full max-h-[300px] cursor-pointer
+              class="p-10 b bg-[url(/images/upi-autopay-bg.svg)] w-full max-h-[300px] cursor-pointer
               bg-no-repeat hover:scale-105 transition-all duration-200
-              hover:bg-[url(./images/upi-autopay-hoverbg.svg)] bg-white drop-shadow-md" >
-                  <img src="./images/razorpayXicon.svg" alt=""
-                  class="w-10 h-10">
+              hover:bg-[url(/images/upi-autopay-hoverbg.svg)] bg-white drop-shadow-md" >
+                  <img src="/images/autopay-icon.svg" class="w-10 h-10 bg-[#2b84ea] rounded-full">
                   <h3 class="font-mullish text-lg font-bold pt-4">UPI AutoPay</h3>
                   <p
                   class="font-mullish py-3 text-[#818597] leading-normal">
@@ -947,7 +947,7 @@
               <div
               class="p-10 bg-[url(/images/magic-checkout-bg.svg)] w-full max-h-[300px] cursor-pointer
               bg-no-repeat hover:scale-105 transition-all duration-200
-              hover:bg-[url(/images/magic-checkout-hoverbg.svg)] bg-white drop-shadow-md" >
+              hover:bg-[url(/images/magic-checkout-hoverbg.svg)]  bg-white drop-shadow-md" >
                   <img src="./images/magic-checkout.svg" alt=""
                   class="w-10 h-10">
                   <h3 class="font-mullish text-lg font-bold pt-4">Magic Checkout</h3>
@@ -967,8 +967,7 @@
               class="p-10 bg-[url(/images/payment-button-bg.svg)] w-full max-h-[300px] cursor-pointer
               bg-no-repeat hover:scale-105 transition-all duration-200
               hover:bg-[url(./images/payment-button-hoverbg.svg)] bg-white drop-shadow-md" >
-                  <img src="./images/razorpayXicon.svg" alt=""
-                  class="w-10 h-10">
+                 <img src="/images/payment-button.svg" class="w-10 h-10 bg-[#2b84ea] rounded-full">
                   <h3 class="font-mullish text-lg font-bold pt-4">Payment Button</h3>
                   <p
                   class="font-mullish py-3 text-[#818597] leading-normal"
@@ -986,8 +985,7 @@
               class="p-10 bg-[url(./images/instant-settlement-bg.svg)] w-full max-h-[300px] cursor-pointer
               bg-no-repeat hover:scale-105 transition-all duration-200
               hover:bg-[url(./images/instant-settlement-bghover.svg)] bg-white drop-shadow-md" >
-                  <img src="./images/razorpayXicon.svg" alt=""
-                  class="w-10 h-10">
+                  <img src="/images/instant-settlement-icon.svg" class="w-10 h-10 bg-[#2b84ea] rounded-full">
                   <h3 class="font-mullish text-lg font-bold pt-4">Instant Settlements</h3>
                   <p
                   class="font-mullish py-3 text-[#818597] leading-normal"
