--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RAZOR PAY USING TAILWIND</title>
     <link rel="stylesheet" href="input.css" />
-    <link rel="icon" href="./image/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
 </head>
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
