--- a/index.html
+++ b/index.html
@@ -907,9 +907,9 @@
               </div>
               <!--card 1-->
               <div
-              class="p-10 bg-[url(/images/instant-settlement-bg.svg)] w-full max-h-[300px] cursor-pointer
+              class="p-10 bg-[url(./images/instant-settlement-bg.svg)] w-full max-h-[300px] cursor-pointer
               bg-no-repeat hover:scale-105 transition-all duration-200
-              hover:bg-[url(/images/instant-settlement-bghover.svg)]
+              hover:bg-[url(./images/instant-settlement-bghover.svg)]
               bg-white drop-shadow-md" >
                   <img src="./images/razorpayXicon.svg" alt=""
                   class="w-10 h-10">
@@ -927,9 +927,9 @@
               </div>
               <!--card 2-->
               <div
-              class="p-10 b bg-[url(/images/upi-autopay-bg.svg)] w-full max-h-[300px] cursor-pointer
+              class="p-10 b bg-[url(./images/upi-autopay-bg.svg)] w-full max-h-[300px] cursor-pointer
               bg-no-repeat hover:scale-105 transition-all duration-200
-              hover:bg-[url(/images/upi-autopay-hoverbg.svg)] bg-white drop-shadow-md" >
+              hover:bg-[url(./images/upi-autopay-hoverbg.svg)] bg-white drop-shadow-md" >
                   <img src="/images/autopay-icon.svg" class="w-10 h-10 bg-[#2b84ea] rounded-full">
                   <h3 class="font-mullish text-lg font-bold pt-4">UPI AutoPay</h3>
                   <p
@@ -945,9 +945,9 @@
               </div>
               <!--card 3-->
               <div
-              class="p-10 bg-[url(/images/magic-checkout-bg.svg)] w-full max-h-[300px] cursor-pointer
+              class="p-10 bg-[url(./images/magic-checkout-bg.svg)] w-full max-h-[300px] cursor-pointer
               bg-no-repeat hover:scale-105 transition-all duration-200
-              hover:bg-[url(/images/magic-checkout-hoverbg.svg)]  bg-white drop-shadow-md" >
+              hover:bg-[url(./images/magic-checkout-hoverbg.svg)]  bg-white drop-shadow-md" >
                   <img src="./images/magic-checkout.svg" alt=""
                   class="w-10 h-10">
                   <h3 class="font-mullish text-lg font-bold pt-4">Magic Checkout</h3>
@@ -964,7 +964,7 @@
               </div>
               <!--card 4-->
               <div
-              class="p-10 bg-[url(/images/payment-button-bg.svg)] w-full max-h-[300px] cursor-pointer
+              class="p-10 bg-[url(./images/payment-button-bg.svg)] w-full max-h-[300px] cursor-pointer
               bg-no-repeat hover:scale-105 transition-all duration-200
               hover:bg-[url(./images/payment-button-hoverbg.svg)] bg-white drop-shadow-md" >
                  <img src="/images/payment-button.svg" class="w-10 h-10 bg-[#2b84ea] rounded-full">
